<resources>
    <string name="app_name">Travel-IT</string>

    <string name="facebook_app_id">1158516084944942</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">8e1e6cab2b3ac8f70470d00a135abb9b</string>

    <string name="sign_in_title">Sign in to your account</string>
    <string name="type_email_hint">Type your Email</string>
    <string name="type_name_hint">Type your Name</string>
    <string name="type_phone_hint">Type your Phone Number</string>
    <string name="type_password_hint">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already registered?</string>
    <string name="to_sign_up">Sign Up →</string>
    <string name="to_sign_in">Sign In →</string>
    <string name="create_new_account">Create new account</string>
    <string name="retype_password_hint">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="type_password">Type Your Password</string>
    <string name="settings">Settings</string>
    <string name="or">or</string>
    <string name="external_sign_in_message">Or you can sign in directly with </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="favorites">Favorites</string>
    <string name="travel_history">Travel History</string>
    <string name="future_travels">Future Travels</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="update_profile_information">Update Profile Information</string>
    <string name="Username">Username</string>
    <string name="Search">Search</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
</resources>