<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/update_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/update_profile_information"
            android:textColor="@color/icicle"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/add_profile_pic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="-43dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/icicle"
            android:src="@drawable/ic_photo_camera" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/update_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColorHint="@color/icicle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_update_username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/Username"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/update_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColorHint="@color/icicle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_update_description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/description"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_update_profile"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/icicle"
            android:elevation="20dp"
            android:gravity="center"
            android:onClick="performEditProfile"
            android:text="Update Profile"
            android:textAllCaps="false"
            android:textColor="@color/blue_topaz"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>