<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/icicle"
        android:orientation="vertical"
        tools:context=".view.activities.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="405dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:background="@drawable/gradient_background_profile"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp" />

                    <TextView
                        android:id="@+id/user_name_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="Wiliam Snoe"
                        android:textColor="#fff"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/button"
                        android:backgroundTint="@color/cerulean"
                        android:drawableStart="@drawable/ic_edit"
                        android:padding="10dp"
                        android:text="Edit Profile"
                        android:textColor="#fff" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="305dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:id="@+id/posts"
                            style="@android:style/Widget.Button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="25dp"
                                android:gravity="center"
                                android:text="@string/posts"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/posts_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingTop="0dp"
                                android:text="2"
                                android:textColor="@color/blue_topaz"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/followers"
                            style="@android:style/Widget.Button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="25dp"
                                android:gravity="center"
                                android:text="Followers"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/followers_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingTop="0dp"
                                android:text="2"
                                android:textColor="@color/blue_topaz"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/following"
                            style="@android:style/Widget.Button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="25dp"
                                android:gravity="center"
                                android:text="@string/following"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/following_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingTop="0dp"
                                android:text="2"
                                android:textColor="@color/blue_topaz"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="25dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_email_grey" />

                    <TextView
                        android:id="@+id/email_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="Wiliam@gmail.com"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/description_profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingStart="25dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_description" />

                    <TextView
                        android:id="@+id/description_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="Wiliam@gmail.com"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp">

                    <Button
                        android:id="@+id/travel_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_history"
                        android:text="@string/travel_history"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>